trying to fix issue with span spacing

--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -47,10 +47,10 @@ a:hover {
   -webkit-text-fill-color: transparent;
 
   // Responsive text purple style
-  // @include respond(phone) {
-  //   background-image: none;
-  //   -webkit-text-fill-color: $primary-color;
-  // }
+  @include respond(phone) {
+    background-image: none;
+    -webkit-text-fill-color: $primary-color;
+  }
 
   &:hover {
     transform: translateX(2px);
