--- a/src/style/components/_buttons.scss
+++ b/src/style/components/_buttons.scss
@@ -32,27 +32,27 @@
   border-image-slice: 1;
   cursor: pointer;
   // Responsive Button hero style
-  // @include respond(phone) {
-  //   background-image: none;
-  //   border: 2px solid $secondary-color;
-  //   -webkit-text-fill-color: $secondary-color;
-  // }
+  @include respond(phone) {
+    background-image: none;
+    border: 2px solid $primary-color;
+    -webkit-text-fill-color: $primary-color;
+  }
 
   &::after {
     background-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
     // Responsive Button hero style
-    // @include respond(phone) {
-    //   background-image: none;
-    // }
+    @include respond(phone) {
+      background-image: none;
+    }
   }
 
   &:hover {
     -webkit-text-fill-color: $white-color;
     text-decoration: none;
     // Responsive Button hover hero style
-    // @include respond(phone) {
-    //   -webkit-text-fill-color: $secondary-color;
-    // }
+    @include respond(phone) {
+      -webkit-text-fill-color: $primary-color;
+    }
 
     &::after {
       width: 100%;
