--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -23,7 +23,7 @@
 
 
   @include respond(phone) {
-    padding: 1.6rem 1.6rem 25.6rem 1.6rem;
+    padding: 1.6rem 1.6rem 22rem 1.6rem;
   }
 
   .hero-title {
@@ -31,20 +31,21 @@
     font-weight: 700;
     margin-bottom: 3.2rem;
     text-align: left;
+    width: 100%;
 
     @include respond(tab-land) {
-      font-size: 4rem;
+      font-size: 3.2rem;
     }
     @include respond(tab-port) {
-      font-size: 3.6rem;
+      font-size: 3.2rem;
       // text-align: center;
     }
     @include respond(phone) {
-      font-size: 3.5rem;
+      font-size: 3.2rem;
       line-height: 1.5;
     }
     @include respond(phone-xs) {
-      font-size: 2.8rem;
+      font-size: 2.4rem;
     }
   }
 
